[gd_scene load_steps=8 format=2]

[ext_resource path="res://Acts/ViewScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Acts/Act2/V_Test.gd" type="Script" id=2]
[ext_resource path="res://Acts/Assets/TestRoom/Test.png" type="Texture" id=3]
[ext_resource path="res://Acts/ElementHoverZone.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.3563, 60.0624 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 57.3563, 60.0624 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 57.3563, 60.0624 )

[node name="Test" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Test" type="Sprite" parent="Backgrounds" index="0"]
position = Vector2( 640, 360 )
texture = ExtResource( 3 )

[node name="Left_action" parent="Clickeables" index="0" instance=ExtResource( 4 )]
position = Vector2( 469.33, 633.935 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickeables/Left_action" index="1"]
shape = SubResource( 1 )

[node name="Middle_action" parent="Clickeables" index="1" instance=ExtResource( 4 )]
position = Vector2( 666.584, 652.98 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickeables/Middle_action" index="1"]
position = Vector2( -19.0453, -20.4055 )
shape = SubResource( 2 )

[node name="Right_action" parent="Clickeables" index="2" instance=ExtResource( 4 )]
position = Vector2( 798.54, 624.412 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Clickeables/Right_action" index="1"]
position = Vector2( 16.3245, 6.80194 )
shape = SubResource( 3 )

